fix: change calculateTotalRadius function to improve the visibility of markers

--- a/src/components/data-container/Data-Container.scss
+++ b/src/components/data-container/Data-Container.scss
@@ -38,6 +38,7 @@
       max-width: 50rem;
 
       .chart-container {
+        min-height: 380px;
         height: 30vh;
       }
     }
